After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 649171 - itunes podcast parsing doesn't work
itunes podcast parsing doesn't work
Status: RESOLVED FIXED
Product: totem-pl-parser
Classification: Core
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: totem-pl-parser-maint
totem-pl-parser-maint
Depends on:
Blocks:
 
 
Reported: 2011-05-02 11:05 UTC by Jonathan Matthew
Modified: 2011-05-03 13:25 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jonathan Matthew 2011-05-02 11:05:26 UTC
It currently seems to get stuck in a redirect loop involving 'http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewCustomPage?name=pageiTunes10Upgrade'

After increasing the version number in the user-agent header, it gives us a plist file with a URL including an id= parameter, which appears to give us the feed data.
Comment 1 Bastien Nocera 2011-05-03 13:25:17 UTC
commit b4c2e6c8941f185125abb505c9e2ca8bdf0fbb63
Author: Bastien Nocera <hadess@hadess.net>
Date:   Tue May 3 14:23:33 2011 +0100

    lib: Fix ITMS parsing from iTunes 10.x
    
    Instead of XML files/plists, the iTunes podcast code now
    uses plists for redirections, and HTML for the podcast itself.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=649171