lib: Fix ITMS parsing from iTunes 10.x

Instead of XML files/plists, the iTunes podcast code now
uses plists for redirections, and HTML for the podcast itself.

https://bugzilla.gnome.org/show_bug.cgi?id=649171